<resources>
    <string name="app_name">BMICalculatorC21011</string>
    <string name="tosi">年齢</string>
    <string name="tall">身長</string>
    <string name="weight">体重</string>
    <string name="sai">歳</string>
    <string name="cm">cm</string>
    <string name="kg">kg</string>
    <string name="keisan">計算</string>
    <string name="clear">クリア</string>
    <string name="dialog_title">警告</string>
    <string name="dialog_msg">適切な肥満度を求めるためには、6歳未満の場合はカウプ指数が、６歳から１５歳まではローレル指数が使われます。本アプリはBMIのみに対応しています。</string>
    <string name="dialog_btn_ok">確認</string>


</resources>