<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btKeisan"
        android:layout_width="294dp"
        android:layout_height="52dp"
        android:layout_marginBottom="8dp"
        android:text="@string/keisan"
        app:layout_constraintBottom_toTopOf="@+id/btClear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btClear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/clear"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/ttTosi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/tosi"
        app:layout_constraintBaseline_toBaselineOf="@+id/ettosi"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/ttTall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/tall"
        app:layout_constraintBaseline_toBaselineOf="@+id/ettall"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/ttWeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/weight"
        app:layout_constraintBaseline_toBaselineOf="@+id/etkg"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/ttcm"
        android:layout_width="31dp"
        android:layout_height="21dp"
        android:text="@string/cm"
        app:layout_constraintBaseline_toBaselineOf="@+id/ettall"
        app:layout_constraintStart_toEndOf="@+id/ettall" />

    <TextView
        android:id="@+id/ttSai"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sai"
        app:layout_constraintBaseline_toBaselineOf="@+id/ettosi"
        app:layout_constraintStart_toEndOf="@+id/ettosi" />

    <TextView
        android:id="@+id/ttkg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kg"
        app:layout_constraintBaseline_toBaselineOf="@+id/etkg"
        app:layout_constraintStart_toEndOf="@+id/etkg" />

    <TextView
        android:id="@+id/ttBMI"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"

        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tthiman"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text=""
        android:textSize="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ttBMI" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tthiman" />

    <TextView
        android:id="@+id/tttekisei"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text=""
        android:textSize="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        app:layout_constraintBaseline_toBaselineOf="@+id/tttekisei"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tttekisei" />

    <EditText
        android:id="@+id/ettosi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:gravity="right"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/ettall"
        app:layout_constraintEnd_toStartOf="@+id/ttSai"
        app:layout_constraintStart_toEndOf="@+id/ttTosi"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/ettall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:gravity="right"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/etkg"
        app:layout_constraintStart_toEndOf="@+id/ttTall"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/etkg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:gravity="right"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/btKeisan"
        app:layout_constraintEnd_toStartOf="@+id/ttkg"
        app:layout_constraintStart_toEndOf="@+id/ttWeight"
        tools:ignore="SpeakableTextPresentCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>